force-app/main/default/objects/Quote/fields/Agente__c.field-meta.xml
<CustomField>
    <fullName>Agente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes Agent</relationshipLabel>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>