force-app/main/default/objects/Quote/fields/Delivery_periods__c.field-meta.xml
<CustomField>
    <fullName>Delivery_periods__c</fullName>
    <label>Delivery period</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>