force-app/main/default/objects/Quote/fields/Filial_Address__c.field-meta.xml
<CustomField>
    <fullName>Filial_Address__c</fullName>
    <formula>Filial__r.BillingCity  + Filial__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsidiary Address</label>
    <type>Text</type>
</CustomField>