force-app/main/default/objects/Quote/fields/Incoterms__c.field-meta.xml
<CustomField>
    <fullName>Incoterms__c</fullName>
    <label>Incoterms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>