force-app/main/default/objects/Quote/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cotización por índices</description>
    <label>Indexx</label>
    <type>Checkbox</type>
</CustomField>