force-app/main/default/objects/Quote/fields/Index_description__c.field-meta.xml
<CustomField>
    <fullName>Index_description__c</fullName>
    <description>Descripción del índice de cotización</description>
    <label>Index Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>