force-app/main/default/objects/Quote/fields/Rebate__c.field-meta.xml
<CustomField>
    <fullName>Rebate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check para cuando el quote es sujeto a rebate</description>
    <label>Rebate</label>
    <type>Checkbox</type>
</CustomField>