force-app/main/default/objects/Quote/fields/Rebate_Description__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Description__c</fullName>
    <label>Rebate Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>