force-app/main/default/objects/Quote/fields/Requires_approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_approval__c</fullName>
    <formula>TotalPrice &gt; 1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires Approval</label>
    <type>Checkbox</type>
</CustomField>