force-app/main/default/objects/Quote/fields/Special_delivery_terms__c.field-meta.xml
<CustomField>
    <fullName>Special_delivery_terms__c</fullName>
    <label>Delivery terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>