force-app/main/default/objects/Quote/fields/Special_Packing_Terms__c.field-meta.xml
<CustomField>
    <fullName>Special_Packing_Terms__c</fullName>
    <label>Packing Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>