force-app/main/default/objects/Quote/fields/Special_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Special_Payment_Terms__c</fullName>
    <label>Special Payment Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>