force-app/main/default/objects/Quote/fields/Special_terms__c.field-meta.xml
<CustomField>
    <fullName>Special_terms__c</fullName>
    <label>Special terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>