force-app/main/default/objects/Quote/fields/Use_of_product__c.field-meta.xml
<CustomField>
    <fullName>Use_of_product__c</fullName>
    <formula>IF(OR(
				ISPICKVAL(Opportunity.Product__c, &quot;Lithium Carbonate&quot;),
				ISPICKVAL(Opportunity.Product__c, &quot;Lithium hydroxide&quot;)),
			&quot;This product cannot be purchased nor used or resold in whole or in part for nuclear fusion.&quot;,
			&quot;Will be use in iodine products.&quot;
			)</formula>
    <label>Use of product</label>
    <type>Text</type>
</CustomField>