force-app/main/default/objects/Quote/fields/Validity_of_price__c.field-meta.xml
<CustomField>
    <fullName>Validity_of_price__c</fullName>
    <label>Validity of price</label>
    <type>Date</type>
</CustomField>