force-app/main/default/objects/Quote/validationRules/Approval_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_is_Required</fullName>
    <active>true</active>
    <description>Quote requiere ser enviada a aprobación.</description>
    <errorConditionFormula>AND(IsSyncing = TRUE,
				Requires_approval__c = TRUE,
				Quote_Approved__c = FALSE)</errorConditionFormula>
    <errorMessage>This Quote must be Submitted to Approval.</errorMessage>
</ValidationRule>