force-app/main/default/objects/Quote/validationRules/Approval_stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_stage</fullName>
    <active>true</active>
    <description>Quote requiere ser enviada a aprobación.</description>
    <errorConditionFormula>IF(
				AND(
								Requires_approval__c = true,
								Quote_Approved__c = false,
								OR(
												ISPICKVAL(Status ,&quot;Denied&quot;),
												ISPICKVAL(Status ,&quot;Presented&quot;),
												ISPICKVAL(Status ,&quot;Accepted&quot;)
												)
								),
				true, false)</errorConditionFormula>
    <errorMessage>You cannot advance to a resolution status if the quote requires approval</errorMessage>
</ValidationRule>