force-app/main/default/objects/Quote/validationRules/Index_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Index_validation</fullName>
    <active>true</active>
    <description>Validación para descripción de ríndice cuando checkbox está activo</description>
    <errorConditionFormula>AND( Index__c  = true, ISBLANK( Index_description__c ))</errorConditionFormula>
    <errorDisplayField>Index_description__c</errorDisplayField>
    <errorMessage>Please, complete the rebate description.</errorMessage>
</ValidationRule>