force-app/main/default/objects/Quote/validationRules/Quotes_Agent.validationRule-meta.xml
<ValidationRule>
    <fullName>Quotes_Agent</fullName>
    <active>true</active>
    <errorConditionFormula>Agent__c = true &amp;&amp; 
ISBLANK( Agente__r.Id )</errorConditionFormula>
    <errorMessage>You must select a Sales Agent.</errorMessage>
</ValidationRule>