force-app/main/default/objects/Quote/validationRules/Rebate_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Rebate_validation</fullName>
    <active>true</active>
    <description>Validación para descripción de rebate cuando checkbox está activo</description>
    <errorConditionFormula>AND(Rebate__c = true, ISBLANK(Rebate_Description__c))</errorConditionFormula>
    <errorDisplayField>Rebate_Description__c</errorDisplayField>
    <errorMessage>Please, complete the rebate description.</errorMessage>
</ValidationRule>